eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eccomerce-service
spec:
  selector:
    app: eccomerce
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
